2009-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_mouse.js:  Give each plot its own
	namespace, so that multiple mouseable plots in the same document do
	not overwrite each other's mouse readout.

	* demo/cities.dem demo/html/Makefile.canvas demo/html/webify_canvas.pl
	demo/html/index.canvas demo/html/mousebox.template
	demo/html/canvas_utf8.dem:
	Add scripts to generate a demo set for the canvas terminal.

	* term/js/README:  Provide some documentation on using the canvas
	terminal to create web pages, and on known browser quirks.

2009-05-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  Javascript output using the "name" option now
	initializes the mouse and zoom tracking for each plot.  This will be
	needed in order to embed multiple mouseable plots in a single document.

	* term/canvas.trm term/js/gnuplot_common.js:
	Dots were not handled by the zoom code.  Create a new routined Dot(x,y)
	to wrap the call to strokeRect().  Bugfix.

	* term/x11.trm: Silence an escaped debug fprintf.  Bugfix.

2008-05-25  Peter Hedwig  <peter@affenbande.org>

	* src/Makefile.am term/lua/ChangeLog term/lua/gnuplot.lua
	 term/lua/gnuplot-lua-tikz.sty term/lua/gnuplot-tikz.help
	 term/lua/gnuplot-tikz.lua term/lua/NEWS term/lua.trm:

	Rearrange internal documentation, improved error handling,
	remove the "script" keyword (script name is now mandatory).

	EAM: term/lua.trm: Create a dummy terminal table for 'tikz' so that
	'set term tikz' can act as a short form of 'set term lua tikz', the
	auto-generated documentation knows about tikz, and GPVAL_TERMINALS
	lists tikz as an available terminal type (requested by Octave).

2009-05-22  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm:  Test for libgd version 2.0.36 or newer.  These allow
	us to specify fonts either by filename or by using the syntax of the
	fontconfig utility.  E.g. "set term png font 'times:italic' 12"
